xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__string_integer.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:string(1)\")"
---
Ok(
    One(
        Atomic(
            String(
                String,
                "1",
            ),
        ),
    ),
)
