xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__value_eq_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 eq 2\")"
---
Ok(
    Item(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
