xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__value_lt_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"2 lt 1\")"
---
Ok(
    Item(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
