xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__value_lt_true.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 lt 2\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
