xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__value_ne_false.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 ne 1\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                false,
            ),
        ),
    ),
)
