xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__value_ne_true.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 ne 2\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
